--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,31 @@
-<div class="header">
-  <div></div>
+<div class="header py-4 text-primary-white">
+  <div class="header-lv1 w-full mb-default flex items-center justify-between">
+    <div class="flex items-center">
+      <i class="fa-solid fa-bars text-primary-white"></i>
+      <div class="w-40 px-4 invert overflow-hidden">
+        <img src="../../../../assets/image/logo.png" alt="" />
+      </div>
+    </div>
+    <div class="flex items-center">
+      <div class="userInfoBox flex items-center">
+        <p class="px-2">sign in</p>
+        <i class="px-2 fa-solid fa-user"></i>
+        <div class="relative">
+          <i class="px-2 fa-solid fa-cart-shopping"></i>
+          <p class="absolute -top-2 right-1/3 text-primary-orange font-extrabold">{{ 0 }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header-lv2 w-full flex items-center justify-center">
+    <div class="searchingBox px-4 w-full relative">
+      <input
+        type="text"
+        class="w-full h-8 outline-none focus:border-1 border-primary-orange text-primary-black"
+      />
+      <button type="submit" class="absolute top-0 right-[3%]">
+        <i class="fa-solid fa-magnifying-glass w-8 h-8 bg-primary-orange p-2"></i>
+      </button>
+    </div>
+  </div>
 </div>
