feat: RWD調整_header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div class="header-lv2 w-full flex items-center justify-center">
+  <div class="header-lv2 w-full mb-default flex items-center justify-center">
     <div class="searchingBox w-full relative">
       <input
         type="text"
