feat: effect 實作

--- a/src/app/feature/e-shopping/shopping-home/shopping-home.component.html
+++ b/src/app/feature/e-shopping/shopping-home/shopping-home.component.html
@@ -1,2 +1,5 @@
-{{ loading$ | async | json }}
 {{ isLoading$ | async | json }}
+<button (click)="getUserList()">http</button>
+<div *ngIf="userList$ | async as userList">
+  {{ userList | json }}
+</div>
