feat: slideMenu - otto

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="header py-4 text-primary-white">
   <div class="header-lv1 w-full mb-default flex items-center justify-between">
     <div class="flex items-center">
-      <i class="fa-solid fa-bars text-primary-white"></i>
+      <button (click)="toggleSliderMenu()">
+        <p class="fa-solid fa-bars text-primary-white cursor-pointer"></p>
+      </button>
       <div class="w-40 px-4 invert overflow-hidden">
         <img src="../../../../assets/image/logo.png" alt="" />
       </div>
@@ -42,11 +44,19 @@
     </swiper>
   </div>
 </div>
-<p-sidebar [(visible)]="sidebarVisible">
-  <h3>Sidebar</h3>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-    laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
+<p-sidebar [(visible)]="sidebarVisible" [showCloseIcon]="false">
+  <ng-template pTemplate="header"
+    ><div class="w-full flex justify-between">
+      Category
+      <button (click)="toggleSliderMenu()">
+        <p class="fa-solid fa-xmark cursor-pointer"></p>
+      </button></div
+  ></ng-template>
+  <ng-template pTemplate="content">Body Content</ng-template>
+  <ng-template pTemplate="footer">Footer Content</ng-template>
 </p-sidebar>
+<div *ngIf="isLoading$ | async as Loading">
+  <p-blockUI [blocked]="Loading">
+    <p-progressSpinner></p-progressSpinner>
+  </p-blockUI>
+</div>
